--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
 DEBUG=True
 SECRET_KEY=S3cr3t_K#Key
 SERVER=boilerplate-code-django-dashboard.appseed.us
+DB_NAME=sini
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DJANGO_EMAIL_HOST=sandbox.smtp.mailtrap.io
+DJANGO_EMAIL_HOST_USER=57446d8d1a6be2
+DJANGO_EMAIL_HOST_PASSWORD=9667bd5a798c11
+DJANGO_EMAIL_PORT=2525
+DJANGO_EMAIL_USE_TLS=False
+DJANGO_EMAIL_USE_SSL=False
+DEFAULT_FROM_EMAIL='SINI <no-reply@sini.com>'
+PASSWORD_RESET_TIMEOUT=259200
